--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<script
+			type="module"
+			src="https://cdn.jsdelivr.net/npm/@ionic/core@6.7.0/dist/ionic/ionic.esm.js"
+		></script>
+		<script
+			nomodule
+			src="https://cdn.jsdelivr.net/npm/@ionic/core@6.7.0/dist/ionic/ionic.js"
+		></script>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@ionic/core@6.7.0/css/ionic.bundle.css"
+		/>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
