--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,13 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/@ionic/core@6.7.0/css/ionic.bundle.css"
 		/>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/MotionPathPlugin.min.js"
+			integrity="sha512-apmmg/pA2CNTUCcl/2YtJWqnOdj1DaQVINtVMlDwQZ99UP8cS/TJX0Xdev4abxVXyEDxrECMvE3Az6ujryBwyA=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
